--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
 
   <dependencies>
 
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+      <version>2.8.8</version>
+    </dependency>
+
 
     <dependency>
       <groupId>org.jboss.spec.javax.ws.rs</groupId>
